assets/scss/general.scss: Change text transform to capitalize.

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -17,7 +17,7 @@ a {
 }
 
 .section-title {
-    text-transform: uppercase;
+    text-transform: capitalize;
     margin-top: 0;
     margin-bottom: 10px;
     display: block;
