--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -11,7 +11,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
         --main-top-padding: 50px;
     }
 
-    --body-background: #f5f5fa;
+    --body-background: #F8FEFF;
 
     --accent-color: #34495e;
     --accent-color-darker: #2c3e50;
